--- a/multimedia.html
+++ b/multimedia.html
@@ -8,21 +8,22 @@
     <title>Multimedia a HTML</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="../html/css/mmedia.css">
-    <link rel="stylesheet" href="css/table.css">
+
 </head>
 
 <body>
     <header>
-        <h1>Multimedia v HTML</h1>
+    <h1>Multimedia v HTML</h1>
 
-        <a href="../html/multimedia.html">Multmedia v HTML</a>
-   
-        <a href="../html/galerie/galery.html">Obrázková galerie</a>
-    
-        <a href="../html/table.html">Tabulka v HTML</a>
- 
     </header>
+    <div class="topnav">
+        <a class="active" href="#">Multimedia</a>
+        <a href="../html/galerie/galery.html">fotogalerie</a>
+        <a href="../html/table.html">Tabulka</a>
 
+
+    </div>
+   
     <main>
         <h2>obrazky v HTML </h2>
         <figure>
@@ -43,8 +44,8 @@
             <audio controls autoplay>
                 <source src="media/ev0lution_mil_pops_zhu_zhu_zhu.mp3" type="audio/ogg">
                 Your browser does not support the audio element.
-               
-            </audio> 
+
+            </audio>
             <figcaption>milpaps</figcaption>
         </figure>
         <h2>video z youtube</h2>
