--- a/multimedia.html
+++ b/multimedia.html
@@ -30,6 +30,7 @@
             <img src="img/spici.jpg" alt="obraz Toyen">
             <figcaption>obraz "Spíci" od Toylen</figcaption>
         </figure>
+      
         <h2>Audio a video v HTML</h2>
 
         <figure>
@@ -37,8 +38,10 @@
                 <source src="media/video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
-            <figcaption>Zelené oko</figcaption>
+            <figcaption>zelené oko</figcaption>
+           
         </figure>
+        <p></p>
 
         <figure>
             <audio controls autoplay>
