--- a/table.html
+++ b/table.html
@@ -27,7 +27,7 @@
       </div>
 
     <main>
-        <h2>Slavna osobnost: Marie Čermínová (Toyen) </h2>
+        <h2>Marie Čermínová (Toyen) </h2>
         <table border="1">
             <caption>Vizitka slavné osobnosti</caption>
             <thead>
