--- a/table.html
+++ b/table.html
@@ -18,8 +18,8 @@
 
     </header>
     <div class="topnav">
-        <a href="../html/multimedia.html">Multimedia</a>
-        <a href="../html/galerie/galery.html">Fotogalerie</a>
+        <a href="/index.html">Multimedia</a>
+        <a href="/galerie/galery.html">Fotogalerie</a>
         <a class="active" href="#">Tabulky</a>
        
        
