--- a/galerie/galery.html
+++ b/galerie/galery.html
@@ -18,9 +18,9 @@
     </header>
 
     <div class="topnav">
-        <a href="/index.html">Multimedia</a>
+        <a href="../index.html">Multimedia</a>
         <a class="active" href="#">fotogalerie</a>
-        <a href="/table.html">Tabulka</a>
+        <a href="../table.html">Tabulka</a>
 
 
     </div>
