--- a/table.html
+++ b/table.html
@@ -18,8 +18,8 @@
 
     </header>
     <div class="topnav">
-        <a href="/index.html">Multimedia</a>
-        <a href="/galerie/galery.html">Fotogalerie</a>
+        <a href="index.html">Multimedia</a>
+        <a href="galerie/galery.html">Fotogalerie</a>
         <a class="active" href="#">Tabulky</a>
        
        
@@ -28,7 +28,7 @@
 
     <main>
         <h2>Marie Čermínová (Toyen) </h2>
-        <table border="1">
+        <table>
             <caption>Vizitka slavné osobnosti</caption>
             <thead>
                 <tr>
