--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </header>
     <div class="topnav">
         <a class="active" href="#">Multimedia</a>
-        <a href="/galerie/galery.html">fotogalerie</a>
-        <a href="/table.html">Tabulka</a>
+        <a href="galerie/galery.html">fotogalerie</a>
+        <a href="table.html">Tabulka</a>
 
 
     </div>
